feat(pydantic): Validate the parameters for bayesian opti using pydantic

--- a/notebooks/assignment.ipynb
+++ b/notebooks/assignment.ipynb
@@ -26,13 +26,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "c3d0586d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import Any\n",
+    "\n",
     "import pandas as pd\n",
-    "import pandera.pandas as pa"
+    "import pandera.pandas as pa\n",
+    "from pydantic import (\n",
+    "    BaseModel,\n",
+    "    Field,\n",
+    "    StrictStr,\n",
+    "    field_validator,\n",
+    ")"
    ]
   },
   {
@@ -400,7 +408,7 @@
    "id": "8f9e9022",
    "metadata": {},
    "source": [
-    "# 2. Validate the dataframe"
+    "# 2. Validate the dataframe using pandera"
    ]
   },
   {
@@ -420,7 +428,9 @@
     "* **JobCode**: The possible values are \"Private employee\", \"Public employee\", \"Retiree\", \"Other\", \"Craftsman\", \"Farmer\" or \"Retailer\",\n",
     "* **VehAge**: Make sure the vehicule age is possible.\n",
     "* **VehGas**: Either \"Regular\" or \"Diesel\".\n",
-    "* **Area**: Possible values are from A1 to A12 included."
+    "* **Area**: Possible values are from A1 to A12 included.\n",
+    "\n",
+    "**Exercise**: Update the schema to check the rules defined above."
    ]
   },
   {
@@ -459,7 +469,45 @@
     "However, as you can see, some features contain NaN values. To handle this issue, you have several solutions:\n",
     "* In the dataframe schema from pandera, set the option of possible NaN values to True. We don't recommend this approach as many models can't handle NaN values or you want to make sure to use them properly.\n",
     "* You can set the option in the pandera schema to drop rows with NaN values.\n",
-    "* You can handle it with the classical feature engineering technics (feature imputing, creating new category, etc.)"
+    "* You can handle it with the classical feature engineering technics (feature imputing, creating new category, etc.)\n",
+    "\n",
+    "**Exercise**: Create a function to handle missing values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f93692a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "######################\n",
+    "### YOUR CODE HERE ###\n",
+    "######################"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bfe3242",
+   "metadata": {},
+   "source": [
+    "To train the model, splitting the dataset between train, validation and test sets is important. You want to make sure each row is splitted into one and only one of the sets. To do so, you can use custom functions from pandera.\n",
+    "\n",
+    "**Exercise**: Adapt the schema to check that each row is in one and only one set.\n",
+    "\n",
+    "**Tips**: Use the `checks` parameter of the schema directly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f28a31af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "######################\n",
+    "### YOUR CODE HERE ###\n",
+    "######################"
    ]
   },
   {
@@ -486,43 +534,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "ff84dcb5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Solution\n",
-    "schema_df = pa.DataFrameSchema({\n",
-    "    \"IDpol\": pa.Column(str),\n",
-    "    \"PayFreq\": pa.Column(str, checks=pa.Check.isin([\"Annual\", \"Half-yearly\", \"Quarterly\", \"Monthly\"])),\n",
-    "    \"VehClass\": pa.Column(str, checks=pa.Check.isin([\n",
-    "        \"Cheapest\", \"Cheaper\", \"Cheap\", \"Medium low\", \"Medium\", \"Medium high\", \"Expensive\", \"More expensive\", \"Most expensive\",\n",
-    "    ])),\n",
-    "    \"VehPower\": pa.Column(str, checks=pa.Check.isin([f\"P{i}\" for i in range(1, 21)])),\n",
-    "    \"VehUsage\": pa.Column(str, checks=pa.Check.isin([\n",
-    "        \"Private+trip to office\", \"Professional\", \"Professional run\",\n",
-    "    ])),\n",
-    "    \"Garage\": pa.Column(str, checks=pa.Check.isin([\n",
-    "        \"Closed zbox\", \"Closed collective parking\", \"Opened collective parking\", \"Street\",\n",
-    "    ])),\n",
-    "    ######################\n",
-    "    ### YOUR CODE HERE ###\n",
-    "    ######################\n",
-    "    \"Year\": pa.Column(int, checks=[pa.Check.ge(2003), pa.Check.le(2004)], coerce=True),\n",
-    "    \"DrivAge\": pa.Column(int, checks=[pa.Check.ge(18), pa.Check.le(100)], coerce=True),\n",
-    "    \"DrivGender\": pa.Column(str, checks=pa.Check.isin([\"M\", \"F\"])),\n",
-    "    \"MaritalStatus\": pa.Column(str, checks=pa.Check.isin([\n",
-    "        \"Cohabiting\", \"Married\", \"Single\", \"Widowed\", \"Divorced\",\n",
-    "    ])),\n",
-    "    \"BonusMalus\": pa.Column(int, checks=pa.Check.ge(50), coerce=True),\n",
-    "    \"LicenceNb\": pa.Column(int, checks=pa.Check.ge(1), coerce=True),\n",
-    "    \"JobCode\": pa.Column(str, checks=pa.Check.isin([\n",
-    "        \"Private employee\", \"Public employee\", \"Retiree\", \"Other\", \"Craftsman\", \"Farmer\", \"Retailer\", \"Unknown\",\n",
-    "    ])),\n",
-    "    \"VehAge\": pa.Column(int, checks=pa.Check.ge(0), coerce=True),\n",
-    "    \"VehGas\": pa.Column(str, checks=pa.Check.isin([\"Regular\", \"Diesel\"])),\n",
-    "    \"Area\": pa.Column(str, checks=pa.Check.isin([f\"A{i}\" for i in range(1, 13)])),\n",
-    "})\n",
+    "\n",
+    "schema_df = pa.DataFrameSchema(\n",
+    "    {\n",
+    "        \"IDpol\": pa.Column(str),\n",
+    "        \"PayFreq\": pa.Column(str, checks=pa.Check.isin([\"Annual\", \"Half-yearly\", \"Quarterly\", \"Monthly\"])),\n",
+    "        \"VehClass\": pa.Column(str, checks=pa.Check.isin([\n",
+    "            \"Cheapest\", \"Cheaper\", \"Cheap\", \"Medium low\", \"Medium\", \"Medium high\", \"Expensive\", \"More expensive\", \"Most expensive\",\n",
+    "        ])),\n",
+    "        \"VehPower\": pa.Column(str, checks=pa.Check.isin([f\"P{i}\" for i in range(1, 21)])),\n",
+    "        \"VehUsage\": pa.Column(str, checks=pa.Check.isin([\n",
+    "            \"Private+trip to office\", \"Professional\", \"Professional run\",\n",
+    "        ])),\n",
+    "        \"Garage\": pa.Column(str, checks=pa.Check.isin([\n",
+    "            \"Closed zbox\", \"Closed collective parking\", \"Opened collective parking\", \"Street\",\n",
+    "        ])),\n",
+    "        ######################\n",
+    "        ### YOUR CODE HERE ###\n",
+    "        ######################\n",
+    "        \"Year\": pa.Column(int, checks=[pa.Check.ge(2003), pa.Check.le(2004)], coerce=True),\n",
+    "        \"DrivAge\": pa.Column(int, checks=[pa.Check.ge(18), pa.Check.le(100)], coerce=True),\n",
+    "        \"DrivGender\": pa.Column(str, checks=pa.Check.isin([\"M\", \"F\"])),\n",
+    "        \"MaritalStatus\": pa.Column(str, checks=pa.Check.isin([\n",
+    "            \"Cohabiting\", \"Married\", \"Single\", \"Widowed\", \"Divorced\",\n",
+    "        ])),\n",
+    "        \"BonusMalus\": pa.Column(int, checks=pa.Check.ge(50), coerce=True),\n",
+    "        \"LicenceNb\": pa.Column(int, checks=pa.Check.ge(1), coerce=True),\n",
+    "        \"JobCode\": pa.Column(str, checks=pa.Check.isin([\n",
+    "            \"Private employee\", \"Public employee\", \"Retiree\", \"Other\", \"Craftsman\", \"Farmer\", \"Retailer\", \"Unknown\",\n",
+    "        ])),\n",
+    "        \"VehAge\": pa.Column(int, checks=pa.Check.ge(0), coerce=True),\n",
+    "        \"VehGas\": pa.Column(str, checks=pa.Check.isin([\"Regular\", \"Diesel\"])),\n",
+    "        \"Area\": pa.Column(str, checks=pa.Check.isin([f\"A{i}\" for i in range(1, 13)])),\n",
+    "        # Sets for the model\n",
+    "        \"train_set\": pa.Column(int, checks=pa.Check.isin([0, 1])),\n",
+    "        \"val_set\": pa.Column(int, checks=pa.Check.isin([0, 1])),\n",
+    "        \"test_set\": pa.Column(int, checks=pa.Check.isin([0, 1])),\n",
+    "        \"big_train_set\": pa.Column(int, checks=pa.Check.isin([0, 1])),\n",
+    "    },\n",
+    "    checks=[\n",
+    "        pa.Check(\n",
+    "            lambda df: (df[[\"train_set\", \"val_set\", \"test_set\"]].sum(axis=1) == 1).all(),\n",
+    "            error=\"Exactly one and only of the train_set, val_set and test_set must be 1 for each row.\",\n",
+    "        ),\n",
+    "    ]\n",
+    ")\n",
     "\n",
     "df_filled = fill_missing_values(df)\n",
     "\n",
@@ -530,9 +592,103 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "17a9ebf9",
+   "metadata": {},
+   "source": [
+    "# 3. Validate the parameters using pydantic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48dbf6cc",
+   "metadata": {},
+   "source": [
+    "**Goal**: The goal of this section is to display a real use of the pydantic validations to check that the parameters passed to your code are ones you accept.\n",
+    "The validations will be applied to parameters to use for the optuna modelisation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "999d3b0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class validate_input_parameters(BaseModel):\n",
+    "    \"\"\"A pydantic class to validate the input parameters of the process.\"\"\"\n",
+    "    target_name: StrictStr = Field(\n",
+    "        pattern=r\"^[A=Za-z0-1\\_]+$\",\n",
+    "        description=\"Name of the target column.\",\n",
+    "        frozen=True,\n",
+    "    )\n",
+    "    # ========================\n",
+    "    # ==== YOUR CODE HERE ====\n",
+    "    # ========================"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3bfad95d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class validate_input_parameters(BaseModel):\n",
+    "    \"\"\"A pydantic class to validate the input parameters of the process.\"\"\"\n",
+    "    target_name: StrictStr = Field(\n",
+    "        pattern=r\"^[A=Za-z0-1\\_]+$\",\n",
+    "        description=\"Name of the target column.\",\n",
+    "        frozen=True,\n",
+    "    )\n",
+    "    search_space: dict[str, dict[StrictStr, Any]] = Field(\n",
+    "        description=\"Search space for the Bayesian optimization.\",\n",
+    "        frozen=True,\n",
+    "    )\n",
+    "    categorical_feat: list[StrictStr] = Field(\n",
+    "        description=\"List of the categorical features\",\n",
+    "        frozen=True,\n",
+    "    )\n",
+    "    default_params: list[dict[StrictStr, Any]] = Field(\n",
+    "        description=\"List of combination of default parameters to check at the beginning of the bayesian optimization.\",\n",
+    "        frozen=True,\n",
+    "    )\n",
+    "    # ========================\n",
+    "    # ==== YOUR CODE HERE ====\n",
+    "    # ========================\n",
+    "\n",
+    "    @field_validator(\"search_space\")\n",
+    "    @classmethod\n",
+    "    def validate_search_space(cls, value: dict[str, Any]) -> dict[str, Any]:\n",
+    "        \"\"\"Validate the search space parameter for the bayesian optimization.\"\"\"\n",
+    "        for hyparam_name, sampling_params in value.items():\n",
+    "            if sampling_params[\"sampling_type\"] == \"categorical\":\n",
+    "                # For categorical parameters\n",
+    "                if \"choices\" not in sampling_params.values():\n",
+    "                    raise KeyError(\n",
+    "                        f\"Check {hyparam_name}. For a categorical feature, you should provide a 'choices' parameter for the possible values.\"\n",
+    "                    )\n",
+    "            elif sampling_params[\"sampling_type\"] in [\"float\", \"int\"]:\n",
+    "                # For continuous parameters\n",
+    "                if (\"min\" not in sampling_params.values()) | (\"max\" not in sampling_params.values()):\n",
+    "                    raise KeyError(f\"Check {hyparam_name}. For continuous parameters, you should provide 'min' and 'max' parameters.\")\n",
+    "            else:\n",
+    "                raise ValueError(f\"Check {hyparam_name}. Sampling type should be either 'categorical', 'int' or 'float'. You provided {sampling_params['sampling_type']}.\")\n",
+    "        return value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c7e6bd4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3439324",
    "metadata": {},
    "outputs": [],
    "source": []
