feat(pandera): Add check for the big_train_set column

--- a/notebooks/assignment.ipynb
+++ b/notebooks/assignment.ipynb
@@ -10,10 +10,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "080a1d6d",
+   "metadata": {},
+   "source": [
+    "**Goal**: The goal of this assignment is to use the packages presented before, i.e. pydantic, pandera and optuna, in a real case scenario, where you want to train a model and find the best hyperparameters.\n",
+    "\n",
+    "Using an open source insurance dataset, we will do the different steps:\n",
+    "* Validate the dataset, making sure it is prepared to train a model using pandera.\n",
+    "* Validate the input parameters for the bayesian optimization using pydantic.\n",
+    "\n",
+    "**Table of contents**:\n",
+    "1. [Validate the dataset using pandera](#1-validate-the-dataset-using-pandera)\n",
+    "2. [Validate the parameters using pydantic](#2-validate-the-parameters-using-pydantic)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3501acb0",
    "metadata": {},
    "source": [
-    "# 1. Imports"
+    "# Imports"
    ]
   },
   {
@@ -21,12 +37,12 @@
    "id": "36b1e90c",
    "metadata": {},
    "source": [
-    "## 1.1 Packages"
+    "## Packages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c3d0586d",
    "metadata": {},
    "outputs": [],
@@ -48,12 +64,12 @@
    "id": "c5d16455",
    "metadata": {},
    "source": [
-    "## 1.2 Options"
+    "## Options"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "4e432369",
    "metadata": {},
    "outputs": [],
@@ -63,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "94b28107",
    "metadata": {},
    "outputs": [],
@@ -76,12 +92,12 @@
    "id": "ca3b9912",
    "metadata": {},
    "source": [
-    "## 1.3 Dataset"
+    "## Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "d798c3c6",
    "metadata": {},
    "outputs": [],
@@ -91,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "8a677555",
    "metadata": {},
    "outputs": [
@@ -135,18 +151,11 @@
        "      <th>Region</th>\n",
        "      <th>Channel</th>\n",
        "      <th>Marketing</th>\n",
-       "      <th>PremWindscreen</th>\n",
-       "      <th>PremDamAll</th>\n",
-       "      <th>PremFire</th>\n",
-       "      <th>PremAcc1</th>\n",
-       "      <th>PremAcc2</th>\n",
-       "      <th>PremLegal</th>\n",
-       "      <th>PremTPLM</th>\n",
-       "      <th>PremTPLV</th>\n",
-       "      <th>PremServ</th>\n",
-       "      <th>PremTheft</th>\n",
        "      <th>PremTot</th>\n",
-       "      <th>IDpol_corrected</th>\n",
+       "      <th>test_set</th>\n",
+       "      <th>val_set</th>\n",
+       "      <th>big_train_set</th>\n",
+       "      <th>train_set</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -171,18 +180,11 @@
        "      <td>Headquarters</td>\n",
        "      <td>A</td>\n",
        "      <td>M1</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>69.1</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>144.1</td>\n",
-       "      <td>1000111.100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -205,21 +207,14 @@
        "      <td>Headquarters</td>\n",
        "      <td>A</td>\n",
        "      <td>M2</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>139.3</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>46.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>215.3</td>\n",
-       "      <td>1000113.100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>1000113.100</td>\n",
        "      <td>2003.0</td>\n",
        "      <td>27.0</td>\n",
@@ -239,21 +234,14 @@
        "      <td>Headquarters</td>\n",
        "      <td>A</td>\n",
        "      <td>M2</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>453.6</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>611.6</td>\n",
-       "      <td>1000113.100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>1000173.100</td>\n",
        "      <td>2003.0</td>\n",
        "      <td>52.0</td>\n",
@@ -273,21 +261,14 @@
        "      <td>Headquarters</td>\n",
        "      <td>A</td>\n",
        "      <td>M1</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>125.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>47.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>111.2</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>48.0</td>\n",
-       "      <td>50.0</td>\n",
        "      <td>415.2</td>\n",
-       "      <td>1000173.100</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>4</th>\n",
        "      <td>1000173.101</td>\n",
        "      <td>2003.0</td>\n",
        "      <td>52.0</td>\n",
@@ -307,18 +288,11 @@
        "      <td>Headquarters</td>\n",
        "      <td>A</td>\n",
        "      <td>M3</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>167.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>132.8</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>48.0</td>\n",
-       "      <td>90.0</td>\n",
        "      <td>487.8</td>\n",
-       "      <td>1000173.101</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -328,47 +302,40 @@
        "         IDpol    Year  DrivAge DrivGender MaritalStatus  BonusMalus  \\\n",
        "0  1000111.100  2003.0     44.0          F    Cohabiting        50.0   \n",
        "1  1000113.100  2003.0     26.0          F    Cohabiting        85.0   \n",
-       "3  1000113.100  2003.0     27.0          F    Cohabiting       106.0   \n",
-       "4  1000173.100  2003.0     52.0          M    Cohabiting        50.0   \n",
-       "5  1000173.101  2003.0     52.0          M    Cohabiting        50.0   \n",
+       "2  1000113.100  2003.0     27.0          F    Cohabiting       106.0   \n",
+       "3  1000173.100  2003.0     52.0          M    Cohabiting        50.0   \n",
+       "4  1000173.101  2003.0     52.0          M    Cohabiting        50.0   \n",
        "\n",
        "   LicenceNb      PayFreq           JobCode  VehAge  VehClass VehPower  \\\n",
        "0        3.0  Half-yearly  Private employee    10.0   Cheaper      P10   \n",
        "1        2.0       Annual             Other     8.0  Cheapest       P8   \n",
-       "3        2.0  Half-yearly             Other     6.0   Cheaper      P11   \n",
-       "4        2.0  Half-yearly  Private employee     2.0   Cheaper      P11   \n",
-       "5        2.0  Half-yearly  Private employee     1.0     Cheap      P13   \n",
+       "2        2.0  Half-yearly             Other     6.0   Cheaper      P11   \n",
+       "3        2.0  Half-yearly  Private employee     2.0   Cheaper      P11   \n",
+       "4        2.0  Half-yearly  Private employee     1.0     Cheap      P13   \n",
        "\n",
        "    VehGas                VehUsage                     Garage Area  \\\n",
        "0  Regular  Private+trip to office                Closed zbox   A2   \n",
        "1  Regular  Private+trip to office  Opened collective parking   A7   \n",
-       "3  Regular  Private+trip to office  Opened collective parking   A7   \n",
-       "4  Regular  Private+trip to office                Closed zbox   A7   \n",
-       "5  Regular  Private+trip to office  Closed collective parking   A7   \n",
+       "2  Regular  Private+trip to office  Opened collective parking   A7   \n",
+       "3  Regular  Private+trip to office                Closed zbox   A7   \n",
+       "4  Regular  Private+trip to office  Closed collective parking   A7   \n",
        "\n",
-       "         Region Channel Marketing  PremWindscreen  PremDamAll  PremFire  \\\n",
-       "0  Headquarters       A        M1            15.0         0.0       0.0   \n",
-       "1  Headquarters       A        M2            16.0         0.0       0.0   \n",
-       "3  Headquarters       A        M2            60.0         0.0       0.0   \n",
-       "4  Headquarters       A        M1            15.0       125.0       5.0   \n",
-       "5  Headquarters       A        M3            24.0       167.0       8.0   \n",
+       "         Region Channel Marketing  PremTot  test_set  val_set  big_train_set  \\\n",
+       "0  Headquarters       A        M1    144.1         1        0              0   \n",
+       "1  Headquarters       A        M2    215.3         1        0              0   \n",
+       "2  Headquarters       A        M2    611.6         1        0              0   \n",
+       "3  Headquarters       A        M1    415.2         0        0              1   \n",
+       "4  Headquarters       A        M3    487.8         0        0              1   \n",
        "\n",
-       "   PremAcc1  PremAcc2  PremLegal  PremTPLM  PremTPLV  PremServ  PremTheft  \\\n",
-       "0       0.0       0.0        6.0      69.1       4.0      50.0        0.0   \n",
-       "1       0.0       0.0        7.0     139.3       7.0      46.0        0.0   \n",
-       "3       0.0       0.0       17.0     453.6      24.0      57.0        0.0   \n",
-       "4       0.0      47.0        9.0     111.2       5.0      48.0       50.0   \n",
-       "5       0.0       0.0       11.0     132.8       7.0      48.0       90.0   \n",
-       "\n",
-       "   PremTot IDpol_corrected  \n",
-       "0    144.1     1000111.100  \n",
-       "1    215.3     1000113.100  \n",
-       "3    611.6     1000113.100  \n",
-       "4    415.2     1000173.100  \n",
-       "5    487.8     1000173.101  "
+       "   train_set  \n",
+       "0          0  \n",
+       "1          0  \n",
+       "2          0  \n",
+       "3          1  \n",
+       "4          1  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,37 +345,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "8796fe82",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PayFreq\n",
-       "Half-yearly    15456\n",
-       "Annual          9551\n",
-       "Quarterly       2068\n",
-       "Monthly          733\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[\"PayFreq\"].value_counts(dropna=False)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "8f9e9022",
    "metadata": {},
    "source": [
-    "# 2. Validate the dataframe using pandera"
+    "# 1. Validate the dataset using pandera"
    ]
   },
   {
@@ -435,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "a50fb0b5",
    "metadata": {},
    "outputs": [],
@@ -476,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7f93692a",
    "metadata": {},
    "outputs": [],
@@ -494,13 +435,15 @@
     "To train the model, splitting the dataset between train, validation and test sets is important. You want to make sure each row is splitted into one and only one of the sets. To do so, you can use custom functions from pandera.\n",
     "\n",
     "**Exercise**: Adapt the schema to check that each row is in one and only one set.\n",
+    "1. Add the right checks for the columns `train_set`, `val_set` and `test_set`.\n",
+    "2. Add a schema check to make sure that each row is assigned to one and only one set.\n",
     "\n",
     "**Tips**: Use the `checks` parameter of the schema directly."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f28a31af",
    "metadata": {},
    "outputs": [],
@@ -511,8 +454,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bcebf4de",
+   "metadata": {},
+   "source": [
+    "We also have the `big_train_set` column which indicates rows contained in the train or validation sets.\n",
+    "\n",
+    "**Exercise**: Adapt the schema to check that rows in either train or validation sets are in the big train set."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "id": "b31ab46a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "######################\n",
+    "### YOUR CODE HERE ###\n",
+    "######################"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "b78fda72",
    "metadata": {},
    "outputs": [],
@@ -534,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ff84dcb5",
    "metadata": {},
    "outputs": [],
@@ -583,6 +548,12 @@
     "            lambda df: (df[[\"train_set\", \"val_set\", \"test_set\"]].sum(axis=1) == 1).all(),\n",
     "            error=\"Exactly one and only of the train_set, val_set and test_set must be 1 for each row.\",\n",
     "        ),\n",
+    "        pa.Check(\n",
+    "            lambda df: (\n",
+    "                (df[\"big_train_set\"] == ((df[\"train_set\"] == 1) | (df[\"val_set\"] == 1)).astype(int))\n",
+    "            ).all(),\n",
+    "            error=\"big_train_set must be 1 if either train_set or valid_set is 1, and 0 otherwise.\"\n",
+    "        ),\n",
     "    ]\n",
     ")\n",
     "\n",
@@ -596,7 +567,7 @@
    "id": "17a9ebf9",
    "metadata": {},
    "source": [
-    "# 3. Validate the parameters using pydantic"
+    "# 2. Validate the parameters using pydantic"
    ]
   },
   {
@@ -610,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "999d3b0d",
    "metadata": {},
    "outputs": [],
@@ -629,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "3bfad95d",
    "metadata": {},
    "outputs": [],
