style: Add yaml option

--- a/notebooks/assignment.ipynb
+++ b/notebooks/assignment.ipynb
@@ -629,7 +629,7 @@
     "   * If the sampling type is either int or float, elements `min` and `max` containing the minimum and maximum values for the search space.\n",
     "\n",
     "For example:\n",
-    "```\n",
+    "```yaml\n",
     "search_space: {\n",
     "    \"param_1\": {\n",
     "        \"sampling_type\": \"categorical\",\n",
