style(pydantic): Add table of contents

--- a/notebooks/2.1-pydantic-explain.ipynb
+++ b/notebooks/2.1-pydantic-explain.ipynb
@@ -2,11 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "4cd87221",
+   "metadata": {},
+   "source": [
+    "# Explain pydantic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "66be30e0",
    "metadata": {},
    "source": [
-    "# Explain pydantic\n",
-    "\n",
     "Pydantic is python library used for data validation.\n",
     "\n",
     "What are the advantages of Pydantic ?\n",
@@ -22,50 +28,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8320baf9",
+   "id": "95a2a221",
    "metadata": {},
    "source": [
-    "# 1. Imports"
+    "**Table of contents**:\n",
+    "1. [Pydantic class](#1-pydantic-examples)\n",
+    "   1. [Pydantic in general](#11-pydantic-in-general)\n",
+    "   2. [Fields](#12-fields)\n",
+    "   3. [Define a pydantic object](#13-define-a-pydantic-object)\n",
+    "   4. [Protect fields](#14-protect-fields)\n",
+    "2. [Validation](#2-validation)\n",
+    "   1. [Field validators](#21-field-validators)\n",
+    "   2. [Model validators](#22-model-validators)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a801fbcb",
-   "metadata": {},
-   "source": [
-    "## 1.1 Packages"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e7310c45",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "546d6a94",
-   "metadata": {},
-   "source": [
-    "## 1.2 Options"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "470654c2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "561ce991",
    "metadata": {},
    "source": [
-    "# 2. Pydantic examples"
+    "# 1. Pydantic class"
    ]
   },
   {
@@ -73,7 +55,7 @@
    "id": "95ddaa1f",
    "metadata": {},
    "source": [
-    "## 2.1 Pydantic in general"
+    "## 1.1 Pydantic in general"
    ]
   },
   {
@@ -110,7 +92,7 @@
    "id": "a3634f76",
    "metadata": {},
    "source": [
-    "## 2.2 Fields"
+    "## 1.2 Fields"
    ]
   },
   {
@@ -178,7 +160,7 @@
    "id": "99941282",
    "metadata": {},
    "source": [
-    "## 2.3 Define a pydantic object"
+    "## 1.3 Define a pydantic object"
    ]
   },
   {
@@ -286,7 +268,7 @@
    "id": "4d659595",
    "metadata": {},
    "source": [
-    "## 2.4 Protect fields"
+    "## 1.4 Protect fields"
    ]
   },
   {
@@ -395,7 +377,7 @@
    "id": "2b05609c",
    "metadata": {},
    "source": [
-    "## 2.5 Validation"
+    "# 2. Validation"
    ]
   },
   {
@@ -403,7 +385,7 @@
    "id": "b33ea0e5",
    "metadata": {},
    "source": [
-    "### 2.5.1 Field validators"
+    "## 2.1 Field validators"
    ]
   },
   {
@@ -588,7 +570,7 @@
    "id": "a49f793e",
    "metadata": {},
    "source": [
-    "### 2.5.2 Model validators"
+    "## 2.2 Model validators"
    ]
   },
   {
@@ -732,7 +714,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.13.2)",
    "language": "python",
    "name": "python3"
   },
